--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 langchain==0.2.0
-langchain-community==0.2.0
-langchain-openai==0.1.7
-openai==1.30.1
-pydantic==2.7.1
+langchain-community==0.2.1
+langchain-core==0.2.3
+langchain-openai==0.1.8
+openai==1.30.5
+pydantic==2.6.4
 python-dotenv==1.0.1
-quadrant==1.0
-requests==2.32.0
 tiktoken==0.7.0
 markdown==3.6
-unstructured==0.14.2
-
+unstructured==0.14.3
+azure-search-documents==11.4.0
+azure-identity==1.15.0
+uvicorn==0.23.2
+fastapi==0.110.0
