--- a/apidefinition.yaml
+++ b/apidefinition.yaml
@@ -150,7 +150,7 @@
                 "type": "string",
                 "enum": [
                     "multiple_choice",
-                    "true_false",
+                    "true_or_false",
                     "popular_choice",
                     "estimation"
                 ],
