Adjusted api definition

--- a/apidefinition.yaml
+++ b/apidefinition.yaml
@@ -1,5 +1,5 @@
 {
-    "openapi": "3.0.1",
+    "openapi": "3.1.0",
     "info": {
         "title": "Human agent for the Smorgs",
         "version": "1.0.0"
@@ -7,172 +7,14 @@
     "paths": {
         "/": {
             "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
+                "summary": "Root",
+                "operationId": "root__get",
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "Successful Response",
                         "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/year": {
-            "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/rating": {
-            "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/actor": {
-            "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/location": {
-            "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/genre": {
-            "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
-                "parameters": [
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "text/plain": {
-                                "schema": {
-                                    "type": "string"
-                                }
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
@@ -181,33 +23,72 @@
         },
         "/healthz": {
             "get": {
-                "tags": [
-                    "SmoorghAPI"
-                ],
+                "summary": "Health check",
+                "description": "Returns a status of the app",
+                "operationId": "healthz",
                 "parameters": [
                     {
                         "name": "query",
                         "in": "query",
+                        "required": false,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "title",
-                        "in": "header",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "type": "string",
+                            "title": "Query"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "Successful Response",
                         "content": {
-                            "text/plain": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
                                 "schema": {
-                                    "type": "string"
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/ask": {
+            "post": {
+                "summary": "Ask a question",
+                "description": "Ask a question",
+                "operationId": "ask",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Ask"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
                                 }
                             }
                         }
@@ -216,5 +97,98 @@
             }
         }
     },
-    "components": {}
+    "components": {
+        "schemas": {
+            "Ask": {
+                "properties": {
+                    "question": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Question"
+                    },
+                    "type": {
+                        "$ref": "#/components/schemas/QuestionType"
+                    },
+                    "correlationToken": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Correlationtoken"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "type"
+                ],
+                "title": "Ask"
+            },
+            "HTTPValidationError": {
+                "properties": {
+                    "detail": {
+                        "items": {
+                            "$ref": "#/components/schemas/ValidationError"
+                        },
+                        "type": "array",
+                        "title": "Detail"
+                    }
+                },
+                "type": "object",
+                "title": "HTTPValidationError"
+            },
+            "QuestionType": {
+                "type": "string",
+                "enum": [
+                    "multiple_choice",
+                    "true_or_false",
+                    "popular_choice",
+                    "estimation"
+                ],
+                "title": "QuestionType"
+            },
+            "ValidationError": {
+                "properties": {
+                    "loc": {
+                        "items": {
+                            "anyOf": [
+                                {
+                                    "type": "string"
+                                },
+                                {
+                                    "type": "integer"
+                                }
+                            ]
+                        },
+                        "type": "array",
+                        "title": "Location"
+                    },
+                    "msg": {
+                        "type": "string",
+                        "title": "Message"
+                    },
+                    "type": {
+                        "type": "string",
+                        "title": "Error Type"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "loc",
+                    "msg",
+                    "type"
+                ],
+                "title": "ValidationError"
+            }
+        }
+    }
 }
