--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
         },
         "ghcr.io/devcontainers/features/github-cli:1": {
             "version": "2"
-        }
+        },
+        "ghcr.io/itsmechlark/features/redis-server:1": {}
     },
     "customizations": {
         "vscode": {
