--- a/template.env
+++ b/template.env
@@ -11,3 +11,4 @@ AZURE_OPENAI_EMBEDDING_MODEL = "text-embedding-3-small"
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME = "text-embedding-3-small"
 AZURE_OPENAI_EMBEDDING_VERSION = "2024-02-01"
 
+TEST
